RESPT API NOT WORKING

--- a/WebContent/WEB-INF/layouts/default.xml
+++ b/WebContent/WEB-INF/layouts/default.xml
@@ -59,4 +59,8 @@
 		<put-attribute name="body" value="/WEB-INF/jsp/userCreated.jsp"></put-attribute>
 	</definition>
 	
+	<definition name="showContactForm" extends="basetemplate">
+		<put-attribute name="body" value="/WEB-INF/jsp/contact.jsp"></put-attribute>
+	</definition>
+	
 	</tiles-definitions>
